--- a/portfolio.html
+++ b/portfolio.html
@@ -234,6 +234,7 @@
 
   <footer>
     <div class="container footer-container">
+
       <div class="footer-contact">
         <a href="" class="logo link">Web<span class="studio">Studio</span> </a>
         <address class="contacts">
@@ -254,7 +255,7 @@
       </div>
 
       <div class="footer-icon">
-        <h2 class="icon-title">присоединяйтесь</h2>
+        <p class="icon-txt">присоединяйтесь</p>
 
         <ul class="footer-icon-list list">
           <li class="footer-icon-item">
@@ -264,6 +265,7 @@
               </svg>
             </a>
           </li>
+
           <li class="footer-icon-item">
             <a href="" class="footer-icon-link link">
               <svg width="20" height="20">
@@ -271,6 +273,7 @@
               </svg>
             </a>
           </li>
+
           <li class="footer-icon-item">
             <a href="" class="footer-icon-link link">
               <svg width="20" height="20">
@@ -278,6 +281,7 @@
               </svg>
             </a>
           </li>
+
           <li class="footer-icon-item">
             <a href="" class="footer-icon-link link">
               <svg width="20" height="20">
@@ -286,6 +290,21 @@
             </a>
           </li>
         </ul>
+      </div>
+
+      <div class="subscription">
+        <p class="subscription-txt">Подпишитесь на рассылку</p>
+
+        <form class="subscription-form">
+          <label>
+            <input name="footer-email" type="email" placeholder="E-mail" class="subscription-input">
+          </label>
+          <button type="submit" class="subscription-btn">Подписаться<svg class="subscription-img" width="24"
+              height="24">
+              <use href="./images/icons.svg#icon_send"></use>
+            </svg></button>
+        </form>
+
       </div>
 
     </div>
